--- a/src/components/Form/Form.scss
+++ b/src/components/Form/Form.scss
@@ -1,3 +1,12 @@
+.form-page__container {
+	width: 100vw;
+	height: 100vh;
+
+	display: flex;
+	justify-content: center;
+	align-items: center;
+}
+
 .movie-form {
 	width: 200px;
 	display: flex;
@@ -6,6 +15,10 @@
 
 	& > * {
 		display: block;
+	}
+
+	&__title {
+		text-align: center;
 	}
 
 	&__checkbox-container {
@@ -18,5 +31,13 @@
 
 	&__checkbox-title {
 		padding: 0 5px;
+	}
+
+	&__submit {
+		padding: 0.5rem 1.5rem;
+	}
+
+	&__cancel {
+		padding: 0.5rem 1.5rem;
 	}
 }
